<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.AboueMeActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_marginTop="100dp"
                android:src="@mipmap/logo"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30dp"
                android:text="@string/app_name"
                />
            <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="Morse Input Method"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>

        <!-- 显示设置项 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/logo"

            android:layout_marginTop="20dp"
            >
            <LinearLayout
                android:id="@+id/privacy_policy"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/privacy_policy"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    />





            </LinearLayout>



            <LinearLayout
                android:id="@+id/user_agreement"

                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"

                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/user_agreement"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    />





            </LinearLayout>
            <LinearLayout
                android:id="@+id/open_source"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/open_source"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    />





            </LinearLayout>

            <LinearLayout
                android:id="@+id/github_repo"

                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/github_repo"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    />





            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</ScrollView>