<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="32dp"
                android:text="@string/app_name"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input"
                android:textSize="20dp"
                android:layout_margin="20dp"
                />
            <LinearLayout
                android:id="@+id/active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/logo"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/jihuo"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    />



            </LinearLayout>

        <LinearLayout
            android:id="@+id/qiyong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/logo"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/qiyong"
                android:textSize="30dp"
                android:textAlignment="center"
                />



        </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:id="@+id/settings_home"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/logo"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"

            >

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/settings_light"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设置中心 Settings"
                android:textSize="20dp"
                android:textColor="@color/black"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/help_home"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/logo"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            >

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/help_light"
                android:layout_marginRight="10dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="帮助中心 Helps"
                android:textSize="20dp"
                android:textColor="@color/black"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_home"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/logo"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            >

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/about"
                android:layout_marginRight="10dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关于我们 About Us"
                android:textSize="20dp"
                android:textColor="@color/black"
                />


        </LinearLayout>

        <!--显示版权信息-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/logo"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Copyrigth 2024-2027 @ WangSyutung "
                android:textSize="12dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local_my"
                android:textSize="12dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>